--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -39,7 +39,7 @@ layout: default
 
     {% if page.social %}
     <div class="social">
-      <div class="contact-icons">
+      <div class="contact-icons"; style="font-size:24px">
         {% include social.html %}
       </div>
       <div class="contact-note">{{ site.contact_note }}</div>
